Updating unit tests to expect array elements among members.